--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" style="background-color: rgb(250, 230, 205);">
   <head>
+    <script src="https://kit.fontawesome.com/71a8ac86ae.js" crossorigin="anonymous"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Hangman</title>
+   <link rel="icon" href="./ghost-solid.svg">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@700&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
